Bug 373586 - Kile crashes with Statistics
Summary: Kile crashes with Statistics
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.60
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords: drkonqi
: 377883 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-12-12 20:27 UTC by S. Umar
Modified: 2017-03-24 21:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Umar 2016-12-12 20:27:11 UTC
Application: kile (2.9.60)

Qt Version: 5.7.0
Frameworks Version: 5.27.0
Operating System: Linux 4.8.14-300.fc25.x86_64 x86_64
Distribution: "Fedora release 25 (Twenty Five)"

-- Information about the crash:
- What I was doing when the application crashed:

Used Statistics from File menu. While using kile I am interested in Statistics such
as number of words etc.

The crash can be reproduced every time.

-- Backtrace:
Application: Kile (kile), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f9791858940 (LWP 13042))]

Thread 5 (Thread 0x7f977d613700 (LWP 13046)):
#0  0x00007f97a02f4460 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f97a352a0ca in QWaitCondition::wait(QMutex*, unsigned long) () at /lib64/libQt5Core.so.5
#2  0x00007f97a9cc2319 in KileParser::ParserThread::run() () at /lib64/libkdeinit5_kile.so
#3  0x00007f97a3529a4a in QThreadPrivate::start(void*) () at /lib64/libQt5Core.so.5
#4  0x00007f97a02ee6ca in start_thread () at /lib64/libpthread.so.0
#5  0x00007f97a2202f6f in clone () at /lib64/libc.so.6

Thread 4 (Thread 0x7f977de14700 (LWP 13045)):
#0  0x00007f97a02f4460 in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f97a352a0ca in QWaitCondition::wait(QMutex*, unsigned long) () at /lib64/libQt5Core.so.5
#2  0x00007f97a9cc2319 in KileParser::ParserThread::run() () at /lib64/libkdeinit5_kile.so
#3  0x00007f97a3529a4a in QThreadPrivate::start(void*) () at /lib64/libQt5Core.so.5
#4  0x00007f97a02ee6ca in start_thread () at /lib64/libpthread.so.0
#5  0x00007f97a2202f6f in clone () at /lib64/libc.so.6

Thread 3 (Thread 0x7f9785c23700 (LWP 13044)):
#0  0x00007f97a21f2bdd in read () at /lib64/libc.so.6
#1  0x00007f979ae5e450 in g_wakeup_acknowledge () at /lib64/libglib-2.0.so.0
#2  0x00007f979ae19c60 in g_main_context_check () at /lib64/libglib-2.0.so.0
#3  0x00007f979ae1a0f4 in g_main_context_iterate.isra () at /lib64/libglib-2.0.so.0
#4  0x00007f979ae1a26c in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#5  0x00007f97a3716d7b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
#6  0x00007f97a36c807a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
#7  0x00007f97a3525673 in QThread::exec() () at /lib64/libQt5Core.so.5
#8  0x00007f97a48b57a9 in QDBusConnectionManager::run() () at /lib64/libQt5DBus.so.5
#9  0x00007f97a3529a4a in QThreadPrivate::start(void*) () at /lib64/libQt5Core.so.5
#10 0x00007f97a02ee6ca in start_thread () at /lib64/libpthread.so.0
#11 0x00007f97a2202f6f in clone () at /lib64/libc.so.6

Thread 2 (Thread 0x7f97873b7700 (LWP 13043)):
#0  0x00007f97a21f700d in poll () at /lib64/libc.so.6
#1  0x00007f979e943d10 in _xcb_conn_wait () at /lib64/libxcb.so.1
#2  0x00007f979e945aa9 in xcb_wait_for_event () at /lib64/libxcb.so.1
#3  0x00007f978ab98a19 in QXcbEventReader::run() () at /lib64/libQt5XcbQpa.so.5
#4  0x00007f97a3529a4a in QThreadPrivate::start(void*) () at /lib64/libQt5Core.so.5
#5  0x00007f97a02ee6ca in start_thread () at /lib64/libpthread.so.0
#6  0x00007f97a2202f6f in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7f9791858940 (LWP 13042)):
[KCrash Handler]
#6  0x00007f97a9b98942 in KileDialog::StatisticsDialog::StatisticsDialog(KileProject*, KileDocument::TextInfo*, QWidget*, KTextEditor::View*, char const*, QString const&) () at /lib64/libkdeinit5_kile.so
#7  0x00007f97a9c062a2 in Kile::showDocInfo(KTextEditor::View*) () at /lib64/libkdeinit5_kile.so
#8  0x00007f97a36effc1 in QMetaObject::activate(QObject*, int, int, void**) () at /lib64/libQt5Core.so.5
#9  0x00007f97a3f0af52 in QAction::triggered(bool) () at /lib64/libQt5Widgets.so.5
#10 0x00007f97a3f0d982 in QAction::activate(QAction::ActionEvent) () at /lib64/libQt5Widgets.so.5
#11 0x00007f97a407c0aa in QMenuPrivate::activateCausedStack(QVector<QPointer<QWidget> > const&, QAction*, QAction::ActionEvent, bool) () at /lib64/libQt5Widgets.so.5
#12 0x00007f97a408231c in QMenuPrivate::activateAction(QAction*, QAction::ActionEvent, bool) () at /lib64/libQt5Widgets.so.5
#13 0x00007f97a4086390 in QMenu::mouseReleaseEvent(QMouseEvent*) () at /lib64/libQt5Widgets.so.5
#14 0x00007f97a3f58c40 in QWidget::event(QEvent*) () at /lib64/libQt5Widgets.so.5
#15 0x00007f97a4086e3b in QMenu::event(QEvent*) () at /lib64/libQt5Widgets.so.5
#16 0x00007f97a3f1196c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
#17 0x00007f97a3f19fcd in QApplication::notify(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
#18 0x00007f97a36c90ea in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt5Core.so.5
#19 0x00007f97a3f1865d in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () at /lib64/libQt5Widgets.so.5
#20 0x00007f97a3f733f3 in QWidgetWindow::handleMouseEvent(QMouseEvent*) () at /lib64/libQt5Widgets.so.5
#21 0x00007f97a3f75633 in QWidgetWindow::event(QEvent*) () at /lib64/libQt5Widgets.so.5
#22 0x00007f97a3f1196c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
#23 0x00007f97a3f19111 in QApplication::notify(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
#24 0x00007f97a36c90ea in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt5Core.so.5
#25 0x00007f97a3a07e33 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at /lib64/libQt5Gui.so.5
#26 0x00007f97a3a098e5 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () at /lib64/libQt5Gui.so.5
#27 0x00007f97a39ea7cb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Gui.so.5
#28 0x00007f978abcec60 in userEventSourceDispatch(_GSource*, int (*)(void*), void*) () at /lib64/libQt5XcbQpa.so.5
#29 0x00007f979ae19e42 in g_main_context_dispatch () at /lib64/libglib-2.0.so.0
#30 0x00007f979ae1a1c0 in g_main_context_iterate.isra () at /lib64/libglib-2.0.so.0
#31 0x00007f979ae1a26c in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#32 0x00007f97a3716d5f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
#33 0x00007f97a36c807a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
#34 0x00007f97a36cfb7c in QCoreApplication::exec() () at /lib64/libQt5Core.so.5
#35 0x00007f97a9cb0f86 in kdemain () at /lib64/libkdeinit5_kile.so
#36 0x00007f97a211b401 in __libc_start_main () at /lib64/libc.so.6
#37 0x00005575e074eaca in _start ()

Reported using DrKonqi
Comment 1 Michel Ludwig 2016-12-16 20:27:43 UTC
Git commit 000882eb2685d02798c5f0dd3a09cf3d9848ec0e by Michel Ludwig.
Committed on 16/12/2016 at 20:27.
Pushed by mludwig into branch 'master'.

Avoid crashing when opening the statistics dialog

Also simplify the arguments of the constructor for the statistics dialog a little.

M  +2    -10   src/dialogs/statisticsdialog.cpp
M  +1    -1    src/dialogs/statisticsdialog.h
M  +1    -2    src/kile.cpp

https://commits.kde.org/kile/000882eb2685d02798c5f0dd3a09cf3d9848ec0e
Comment 2 S. Umar 2016-12-16 22:24:16 UTC
Thanks, that worked. It would also be nice if the citation problem can be
fixed, namely after typing \cite{ if you hit ctrl+space you don't get the
citations from the bib file but a list of every word in the tex file.
Comment 3 Christoph Feck 2017-03-24 21:19:28 UTC
*** Bug 377883 has been marked as a duplicate of this bug. ***