Avoid crashing when opening the statistics dialog

Also simplify the arguments of the constructor for the statistics dialog a little.

BUG: 373586